@@ -1,3 +1,6 @@
+v2016-03-18
+  * archpkg 更新pkgfile 数据库时使用root 权限
+
 v2016-03-17
   * 根据YCM 的改动修改了make 的参数
 
